added limit for event/date, optimized code, added validation for type, added parsing for date when filtering, added endpoint to get all events in a month, added warn level log
